--- a/src/Styles/sidebar.css
+++ b/src/Styles/sidebar.css
@@ -1,11 +1,14 @@
 .sidebar {
   width: 250px;
-  background: #333;
+  background: #a30d2d;
   padding: 20px;
   height: 100vh;
   border-right: 1px solid #ccc;
   transition: transform 0.35s ease-in-out;
   z-index: 999;
+}
+.logo{
+  color:#fff
 }
 
 .sidebar ul {
